task: add connect layout

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,4 +1,5 @@
 {
   "*.(ts|tsx|js|json)": "prettier --write",
-  "*.(ts|tsx)": ["yarn lint:es", "tsc-files --noEmit", "yarn lint:style"]
+  "*.(ts|tsx)": ["eslint", "tsc-files --noEmit"],
+  "*.(tsx|css)": ["stylelint --fix"]
 }
