--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -47,3 +47,22 @@ jobs:
       - name: Run Eslint
         run: yarn lint:es
 
+  lint_style:
+    runs-on: ubuntu-latest
+    name: Lint ESLint
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Cache node_modules
+        uses: actions/cache@v2
+        with:
+          path: |
+            node_modules
+            */*/node_modules
+          key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+
+      - name: Install dependecies
+        run: yarn install --frozen-lockfile
+
+      - name: Run Stylelint
+        run: yarn lint:style
