--- a/package.json
+++ b/package.json
@@ -67,5 +67,6 @@
     "stylelint-order": "^5.0.0",
     "stylelint-processor-styled-components": "^1.10.0",
     "tsc-files": "^1.1.3"
-  }
+  },
+  "packageManager": "yarn@3.2.4"
 }
