--- a/package.json
+++ b/package.json
@@ -8,25 +8,13 @@
     "@solana/wallet-adapter-react-ui": "^0.9.22",
     "@solana/wallet-adapter-wallets": "^0.19.5",
     "@solana/web3.js": "^1.66.2",
-    "@stylelint/postcss-css-in-js": "^0.38.0",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "eslint": "^8.3.0",
-    "postcss": "^8.4.4",
-    "postcss-syntax": "^0.36.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "reset-css": "^5.0.1",
-    "styled-components": "^5.3.6",
-    "typescript": "^4.4.2",
-    "webpack": "^5.64.4",
-    "webpack-dev-server": "^4.6.0"
+    "styled-components": "^5.3.6"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js",
     "lint:style": "stylelint './src/**/*.(tsx|css)'",
     "lint:type": "tsc --noEmit --project ./tsconfig.json --emitDeclarationOnly false",
     "lint:es": "eslint ."
@@ -46,9 +34,13 @@
   "devDependencies": {
     "@commitlint/cli": "^17.2.0",
     "@commitlint/config-conventional": "^17.2.0",
+    "@stylelint/postcss-css-in-js": "^0.38.0",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.8",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
+    "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-recommended": "^4.1.0",
     "eslint-plugin-import": "^2.26.0",
@@ -58,7 +50,9 @@
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "node-polyfill-webpack-plugin": "^2.0.1",
+    "postcss": "^8.4.18",
     "postcss-jsx": "^0.36.4",
+    "postcss-syntax": "^0.36.2",
     "prettier": "^2.7.1",
     "stylelint": "^14.14.1",
     "stylelint-config-prettier": "^9.0.3",
@@ -66,7 +60,10 @@
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-order": "^5.0.0",
     "stylelint-processor-styled-components": "^1.10.0",
-    "tsc-files": "^1.1.3"
+    "tsc-files": "^1.1.3",
+    "typescript": "^4.8.4",
+    "webpack": "^5.74.0",
+    "webpack-dev-server": "^4.11.1"
   },
   "packageManager": "yarn@3.2.4"
 }
