--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "styled-components": "^5.3.6"
   },
   "scripts": {
+    "build": "webpack build --mode production",
+    "serve": "webpack serve --mode development",
     "lint:style": "stylelint './src/**/*.(tsx|css)'",
     "lint:type": "tsc --noEmit --project ./tsconfig.json --emitDeclarationOnly false",
     "lint:es": "eslint ."
@@ -32,14 +34,21 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
     "@commitlint/cli": "^17.2.0",
     "@commitlint/config-conventional": "^17.2.0",
     "@stylelint/postcss-css-in-js": "^0.38.0",
     "@types/react": "^18.0.25",
+    "@types/react-dev-utils": "^9.0.11",
     "@types/react-dom": "^18.0.8",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
+    "babel-loader": "^9.1.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.7.1",
     "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-recommended": "^4.1.0",
@@ -47,13 +56,17 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "eslint-plugin-turisap": "^0.0.16",
+    "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.1",
+    "inspectpack": "^4.7.1",
     "lint-staged": "^13.0.3",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "postcss": "^8.4.18",
     "postcss-jsx": "^0.36.4",
     "postcss-syntax": "^0.36.2",
     "prettier": "^2.7.1",
+    "react-dev-utils": "^12.0.1",
+    "style-loader": "^3.3.1",
     "stylelint": "^14.14.1",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recommended": "^9.0.0",
@@ -63,7 +76,9 @@
     "tsc-files": "^1.1.3",
     "typescript": "^4.8.4",
     "webpack": "^5.74.0",
-    "webpack-dev-server": "^4.11.1"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1",
+    "webpackbar": "^5.0.2"
   },
   "packageManager": "yarn@3.2.4"
 }
