--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "babel-loader": "^9.1.0",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^4.2.2",
     "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-recommended": "^4.1.0",
@@ -62,6 +63,7 @@
     "husky": "^8.0.1",
     "inspectpack": "^4.7.1",
     "lint-staged": "^13.0.3",
+    "mini-css-extract-plugin": "^2.6.1",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "postcss": "^8.4.18",
     "postcss-jsx": "^0.36.4",
