fix: terser plugin

--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -49,7 +49,7 @@ jobs:
 
   lint_style:
     runs-on: ubuntu-latest
-    name: Lint ESLint
+    name: Lint Stylelint
     steps:
       - uses: actions/checkout@v2
 
