--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.20.2",
     "@babel/eslint-parser": "^7.19.1",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
@@ -81,6 +82,8 @@
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-order": "^5.0.0",
     "stylelint-processor-styled-components": "^1.10.0",
+    "terser-webpack-plugin": "^5.3.6",
+    "ts-node": "^10.9.1",
     "tsc-files": "^1.1.3",
     "typescript": "^4.8.4",
     "webpack": "^5.74.0",
