task: CRA free setup (#3)
* chore: move to yarn 2

* chore: remove CRA-related code

* chore: setup eslint

* chore: remove yarn cache

* chore: add stylelint to gh-actions

* fix: update yarn version

* chore: clean up deps

* chore: webpack setup

* chore: setup eslint parsers for js and ts

* task: style loaders for webpack

* task: add ant-design

* task: add navbar

* task: add global styles

* fix: add global styles styled-components

* fix: styled-components styling

* chore: add bundle analizer

* chore: add fork type checker plugin for the prod

* task: add route code-splitting

* task: add connecting animations

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,15 @@
 .idea/**
 .pnp.js
 
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+.pnp.loader.mjs
+.pnp.cjs
+
 # testing
 /coverage
 
