--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "serve": "webpack serve --mode development",
     "lint:style": "stylelint './src/**/*.(tsx|css)'",
     "lint:type": "tsc --noEmit --project ./tsconfig.json --emitDeclarationOnly false",
-    "lint:es": "eslint ."
+    "lint:es": "eslint './src/**/*'"
   },
   "browserslist": {
     "production": [
@@ -92,8 +92,8 @@
     "webpack-dev-server": "^4.11.1",
     "webpackbar": "^5.0.2"
   },
-  "packageManager": "yarn@3.2.4",
   "resolutions": {
     "@solana/wallet-adapter-react-ui@^0.9.22": "patch:@solana/wallet-adapter-react-ui@npm%3A0.9.22#./.yarn/patches/@solana-wallet-adapter-react-ui-npm-0.9.22-d9ac5fd893.patch"
-  }
+  },
+  "packageManager": "yarn@1.22.1"
 }
