--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@solana/wallet-adapter-wallets": "^0.19.5",
     "@solana/web3.js": "^1.66.2",
     "babel-plugin-styled-components": "^2.0.7",
+    "mobx": "^6.6.2",
+    "mobx-react-lite": "^3.4.0",
     "observable-hooks": "^4.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
