chore: move rpc endpoint to env file

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@solana/wallet-adapter-react-ui": "^0.9.22",
     "@solana/wallet-adapter-wallets": "^0.19.5",
     "@solana/web3.js": "^1.66.2",
+    "@types/dotenv-webpack": "^7.0.3",
     "babel-plugin-styled-components": "^2.0.7",
+    "dotenv-webpack": "^8.0.1",
     "mobx": "^6.6.2",
     "mobx-react-lite": "^3.4.0",
     "observable-hooks": "^4.2.1",
