--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,10 +20,11 @@
       "@components/*": ["components/*"],
       "@pages/*": ["pages/*"],
       "@stores/*": ["stores/*"],
-      "@typings/*": ["typings/*"]
+      "@typings/*": ["typings/*"],
+      "@styled/*": ["styled/*"]
     }
   },
-  "types": ["./src/typings/styled.d.ts"],
+  "types": ["./src/typings/styled.d.ts" , "./src/typings/global.d.ts"],
   "ts-node": {
     "compilerOptions": {
       "module": "CommonJS"
