--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mobx": "^6.6.2",
     "mobx-react-lite": "^3.4.0",
     "observable-hooks": "^4.2.1",
+    "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
