feat: token list (#5)
* task: add sol balance

* task: add number spl tokens

* task: got spl tokens

* chore: replace sol balance with mobx state

* chore: move rpc endpoint to env file

* task: add spl tokens and loaders

* fix: tsc-files error

* fix: tokens scrolling

* fix: add utils path

* task: working tokens on saberhq

* fix: custom ammount

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,9 +14,17 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": "./src",
+    "paths": {
+      "@components/*": ["components/*"],
+      "@pages/*": ["pages/*"],
+      "@stores/*": ["stores/*"],
+      "@typings/*": ["typings/*"],
+      "@styled/*": ["styled/*"],
+      "@utils/*": ["utils/*"]
+    }
   },
-  "types": ["./src/styled.d.ts"],
   "ts-node": {
     "compilerOptions": {
       "module": "CommonJS"
