--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.4.3",
+    "reflect-metadata": "^0.1.13",
     "reset-css": "^5.0.1",
     "rxjs": "^7.5.7",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "tsyringe": "^4.7.0"
   },
   "scripts": {
     "build": "webpack build --mode production",
@@ -48,6 +50,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.2",
     "@babel/eslint-parser": "^7.19.1",
+    "@babel/plugin-proposal-decorators": "^7.20.2",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
@@ -62,6 +65,7 @@
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
     "babel-loader": "^9.1.0",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.2.2",
