--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "esnext",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
@@ -25,7 +25,8 @@
       "@typings/*": ["typings/*"],
       "@styled/*": ["styled/*"],
       "@utils/*": ["utils/*"],
-      "@nft/*": ["nft/*"]
+      "@nft/*": ["nft/*"],
+      "@assets/*": ["assets/*"]
     }
   },
   "ts-node": {
