task: NFTs list (#7)
* task: add tsyringe with intances resolution

* fix: redirect on reload

* fix: redirect and loader styles

* task: obtained nft urls

* task: nft page with images

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "esnext",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
@@ -22,7 +24,9 @@
       "@stores/*": ["stores/*"],
       "@typings/*": ["typings/*"],
       "@styled/*": ["styled/*"],
-      "@utils/*": ["utils/*"]
+      "@utils/*": ["utils/*"],
+      "@nft/*": ["nft/*"],
+      "@assets/*": ["assets/*"]
     }
   },
   "ts-node": {
