--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@nfteyez/sol-rayz": "^0.10.2",
     "@saberhq/token-utils": "^1.14.9",
     "@solana/spl-token-registry": "^0.2.4574",
     "@solana/wallet-adapter-base": "^0.9.18",
@@ -12,6 +13,8 @@
     "@solana/web3.js": "^1.66.2",
     "@types/dotenv-webpack": "^7.0.3",
     "babel-plugin-styled-components": "^2.0.7",
+    "borsh": "^0.7.0",
+    "class-transformer": "^0.5.1",
     "dotenv-webpack": "^8.0.1",
     "mobx": "^6.6.2",
     "mobx-react-lite": "^3.4.0",
@@ -21,9 +24,11 @@
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.4.3",
+    "reflect-metadata": "^0.1.13",
     "reset-css": "^5.0.1",
     "rxjs": "^7.5.7",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "tsyringe": "^4.7.0"
   },
   "scripts": {
     "build": "webpack build --mode production",
@@ -48,6 +53,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.2",
     "@babel/eslint-parser": "^7.19.1",
+    "@babel/plugin-proposal-decorators": "^7.20.2",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
@@ -62,6 +68,7 @@
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
     "babel-loader": "^9.1.0",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.2.2",
