--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-plugin-styled-components": "^2.0.7",
     "borsh": "^0.7.0",
     "dotenv-webpack": "^8.0.1",
+    "firebase": "^9.14.0",
     "mobx": "^6.6.2",
     "mobx-react-lite": "^3.4.0",
     "observable-hooks": "^4.2.1",
