--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "borsh": "^0.7.0",
     "dotenv-webpack": "^8.0.1",
     "firebase": "^9.14.0",
+    "loglevel": "^1.8.1",
     "mobx": "^6.6.2",
     "mobx-react-lite": "^3.4.0",
     "observable-hooks": "^4.2.1",
