--- a/rust/address-list/Cargo.toml
+++ b/rust/address-list/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [dependencies]
 solana-program = "1.14.8"
+borsh = "0.9.1"
+borsh-derive = "0.9.1"
 
 [lib]
 crate-type = ["cdylib", "lib"]
