--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@solana/wallet-adapter-wallets": "^0.19.5",
     "@solana/web3.js": "^1.66.2",
     "@types/dotenv-webpack": "^7.0.3",
+    "@types/ramda": "^0.28.20",
     "babel-plugin-styled-components": "^2.0.7",
     "borsh": "^0.7.0",
     "bs58": "^5.0.0",
@@ -23,6 +24,7 @@
     "mobx-react-lite": "^3.4.0",
     "observable-hooks": "^4.2.1",
     "polished": "^4.2.2",
+    "ramda": "^0.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
