--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@solana/wallet-adapter-wallets": "^0.19.5",
     "@solana/web3.js": "^1.66.2",
     "@types/dotenv-webpack": "^7.0.3",
+    "@types/lodash.throttle": "^4.1.7",
     "@types/ramda": "^0.28.20",
     "babel-plugin-styled-components": "^2.0.7",
     "borsh": "^0.7.0",
     "bs58": "^5.0.0",
     "dotenv-webpack": "^8.0.1",
     "firebase": "^9.14.0",
+    "lodash.throttle": "^4.1.1",
     "loglevel": "^1.8.1",
     "mobx": "^6.6.2",
     "mobx-react-lite": "^3.4.0",
