--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mobx-react-lite": "^3.4.0",
     "observable-hooks": "^4.2.1",
     "polished": "^4.2.2",
+    "qrcode.react": "^3.1.0",
     "ramda": "^0.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
