task: add basename

--- a/.github/workflows/deploy-gh.yml
+++ b/.github/workflows/deploy-gh.yml
@@ -20,6 +20,7 @@ jobs:
         env:
           REMOTE_CONFIG_API_KEY: ${{ secrets.REMOTE_CONFIG_API_KEY }}
           REMOTE_CONFIG_APP_ID: ${{ secrets.REMOTE_CONFIG_APP_ID }}
+          BASE_NAME: /simple-wallet
         run: |
           yarn install --frozen-lockfile
           yarn build
