--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ramda": "^0.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.4.3",
     "react-select": "^5.6.1",
