--- a/package.json
+++ b/package.json
@@ -4,29 +4,38 @@
   "private": true,
   "dependencies": {
     "@nfteyez/sol-rayz": "^0.10.2",
+    "@project-serum/borsh": "^0.2.5",
     "@saberhq/token-utils": "^1.14.9",
     "@solana/spl-token-registry": "^0.2.4574",
-    "@solana/wallet-adapter-base": "^0.9.18",
-    "@solana/wallet-adapter-react": "^0.15.24",
-    "@solana/wallet-adapter-react-ui": "^0.9.22",
-    "@solana/wallet-adapter-wallets": "^0.19.5",
+    "@solana/wallet-adapter-base": "^0.9.19",
+    "@solana/wallet-adapter-react": "^0.15.25",
+    "@solana/wallet-adapter-react-ui": "^0.9.23",
+    "@solana/wallet-adapter-wallets": "^0.19.6",
     "@solana/web3.js": "^1.66.2",
     "@types/dotenv-webpack": "^7.0.3",
+    "@types/lodash.throttle": "^4.1.7",
+    "@types/ramda": "^0.28.20",
     "babel-plugin-styled-components": "^2.0.7",
     "borsh": "^0.7.0",
+    "bs58": "^5.0.0",
     "dotenv-webpack": "^8.0.1",
     "firebase": "^9.14.0",
+    "lodash.throttle": "^4.1.1",
+    "loglevel": "^1.8.1",
     "mobx": "^6.6.2",
     "mobx-react-lite": "^3.4.0",
     "observable-hooks": "^4.2.1",
     "polished": "^4.2.2",
+    "qrcode.react": "^3.1.0",
+    "ramda": "^0.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.4.3",
+    "react-select": "^5.6.1",
     "reflect-metadata": "^0.1.13",
     "reset-css": "^5.0.1",
-    "rxjs": "^7.5.7",
     "styled-components": "^5.3.6",
     "tsyringe": "^4.7.0"
   },
@@ -36,7 +45,9 @@
     "serve": "webpack serve --mode development",
     "lint:style": "stylelint './src/**/*.(tsx|css)'",
     "lint:type": "tsc --noEmit --project ./tsconfig.json --emitDeclarationOnly false",
-    "lint:es": "eslint './src/**/*'"
+    "lint:es": "eslint './src/**/*'",
+    "logs": "solana logs",
+    "validator": "solana-test-validator"
   },
   "browserslist": {
     "production": [
@@ -53,7 +64,10 @@
   "devDependencies": {
     "@babel/core": "^7.20.2",
     "@babel/eslint-parser": "^7.19.1",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-decorators": "^7.20.2",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@babel/plugin-proposal-private-property-in-object": "^7.20.5",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
@@ -107,9 +121,6 @@
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1",
     "webpackbar": "^5.0.2"
-  },
-  "resolutions": {
-    "@solana/wallet-adapter-react-ui@^0.9.22": "patch:@solana/wallet-adapter-react-ui@npm%3A0.9.22#./.yarn/patches/@solana-wallet-adapter-react-ui-npm-0.9.22-d9ac5fd893.patch"
   },
   "packageManager": "yarn@1.22.1"
 }
