fix: add ga native script

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bs58": "^5.0.0",
     "dotenv-webpack": "^8.0.1",
     "firebase": "^9.14.0",
+    "ga-gtag": "^1.1.5",
     "lodash.throttle": "^4.1.1",
     "loglevel": "^1.8.1",
     "mobx": "^6.6.2",
@@ -30,7 +31,6 @@
     "ramda": "^0.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-ga": "^3.3.1",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.4.3",
     "react-select": "^5.6.1",
