task: add readme

--- a/.env.development.example
+++ b/.env.development.example
@@ -1,2 +1,3 @@
-REMOTE_CONFIG_API_KEY=FIREBASE_API_KEY
-REMOTE_CONFIG_APP_ID=FIREBASE_APP_ID
+REMOTE_CONFIG_API_KEY=
+REMOTE_CONFIG_APP_ID=
+GOOGLE_TRACKING_ID=
